--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             submitBtn.disabled = true;
             
             // Send to n8n webhook (replace with your actual webhook URL)
-            const webhookUrl = 'YOUR_N8N_WEBHOOK_URL_HERE';
+            const webhookUrl = 'https://relentlessdev.app.n8n.cloud/webhook/d1ffe0bc-6aca-4d38-bebb-c42fc5fcda5c';
             
             try {
                 await fetch(webhookUrl, {
