--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         const Circle = () => <i data-lucide="circle"></i>;
 
         const MomentumDashboard = () => {
-            const API_URL = 'http://relentlessdev.app.n8n.cloud/webhook/cash-flow-data';
+            const API_URL = 'https://relentlessdev.app.n8n.cloud/webhook/cash-flow-data';
             const USER_EMAIL = 'test@momentum.ai';
             const [sidebarOpen, setSidebarOpen] = React.useState(true);
             const [chatOpen, setChatOpen] = React.useState(false);
